# garrison

./: .gitignore  LICENSE  README.md  git.go  main.go  pyproject.toml  state.go  tmux.go  tui.go
garrison/: main.py  manager.py  state.py  tmux.py
