[project]
name = "garrison"
version = "0.1.0"
description = "A tmux-based orchestrator for parallel Claude CLI sessions"
requires-python = ">=3.11"
dependencies = [
    "textual>=0.80.0",
]

[project.scripts]
garrison = "garrison.main:entry"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
